# heliostv

./: .gitignore  COPYING  Makefile.am  README.md  autogen.sh  configure.ac
doc/: protocol.md
example/: heliostv-play
include/: Makefile.am  heliostv.h
include/heliostv/: ControlChannel.h  DataChannel.h  IChannelFactory.h  ITransportClient.h  Stream.h  TcpChannelFactory.h  TcpClient.h
libheliostv/: ControlChannel.cpp  DataChannel.cpp  IChannelFactory.cpp  ITransportClient.cpp  Makefile.am  Stream.cpp  TcpChannelFactory.cpp  TcpClient.cpp  compil.sh
src/: Channels.conf  Makefile.am  heliostv  main.cpp  pipeline.cpp  tee_modif2.c
